--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "joi": "^17.13.3",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
