--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
