--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "npm run test"
+    "test": "npm run test",
+    "lint": "eslint ."
   },
   "author": "Diego Franco",
   "license": "MIT",
